--- a/608/index.html
+++ b/608/index.html
@@ -1,1 +1,8 @@
-https://drive.google.com/drive/my-drive?dmr=1&ec=wgc-drive-globalnav-goto
+<html>
+  <head></head>
+  <body>
+    <h1>https://drive.google.com/drive/my-drive?dmr=1&ec=wgc-drive-globalnav-goto</h1>
+    <div id="gallery"></div>
+    <img src="https://drive.google.com/file/d/1ANsEZOMqpkU623w0TXCURR6VjeprnnCc/view?usp=drive_link" />
+  </body>
+</html>
