--- a/608/index.html
+++ b/608/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>畢業紀念冊</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        img {
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-    </style>
+    <title>顯示 Google Drive 圖片</title>
 </head>
 <body>
-    <h1>畢業紀念冊</h1>
-    <p>歡迎來到我們的畢業紀念冊！</p>
 
-    <!-- 插入圖片 -->
-    <img src="https://drive.google.com/uc?export=view&id=12ZU_I6Hm8oPBcRW4SXBoF0wpf_aqxmyU" alt="畢業照" width="300">
+    <h1>我的 Google Drive 照片</h1>
+    <img src="https://drive.google.com/uc?export=view&id=你的圖片ID" width="300">
 
-
-    <p>這是我們的班級畢業照！</p>
-
-    <!-- 可以繼續插入更多的圖片 -->
-    <img src="https://drive.google.com/uc?export=view&id=另一個文件ID" alt="其他照片" width="300">
 </body>
 </html>
