--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>我的 Google Drive 照片</h1>
-    <img src="https://drive.google.com/uc?export=view&id=你的圖片ID" width="300">
+    <img src="https://drive.google.com/uc?export=view&id=1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k" width="300">
 
 </body>
 </html>
