--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>mkmkfmkhmkfdhmkhdfhmhm</h1>
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>顯示 Google Drive 圖片</title>
+</head>
+<body>
+
+    <h1>我的 Google Drive 照片</h1>
+    <img src="https://drive.google.com/uc?export=view&id=1ANsEZOMqpkU623w0TXCURR6VjeprnnCc" width="300">
+</body>
+</html>
