--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 
     <h1>我的 Google Drive 照片</h1>
-    <img src="https://drive.google.com/uc?export=view&id=1ANsEZOMqpkU623w0TXCURR6VjeprnnCc" width="300">
+    <img src="https://drive.google.com/thumbnail&id=1ANsEZOMqpkU623w0TXCURR6VjeprnnCc" width="300">
 </body>
 </html>
