--- a/608/index.html
+++ b/608/index.html
@@ -3,40 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Drive API 顯示資料夾圖片</title>
+    <title>畢業紀念冊</title>
     <style>
-        #gallery img { width: 150px; margin: 10px; border-radius: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        img {
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
+    <h1>畢業紀念冊</h1>
+    <p>這是我們的畢業照：</p>
 
-    <h1>Google Drive 照片展示</h1>
-    <div id="gallery"></div>
+    <!-- 顯示圖片 -->
+    <img src="https://drive.google.com/uc?export=view&id=12ZU_I6Hm8oPBcRW4SXBoF0wpf_aqxmyU" alt="畢業照" width="300">
 
-    <script>
-        const apiKey = "AIzaSyAcgARDEqLfqL25LN1m--pVvVMgsqfzzmI";  // 🔹 請替換成你的 API Key
-        const folderId = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA";  // 🔹 請替換成你的資料夾 ID
-
-        async function fetchImages() {
-            const url = `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents&key=${apiKey}&fields=files(id,name,mimeType)`;
-            const response = await fetch(url);
-            const data = await response.json();
-
-            const gallery = document.getElementById("gallery");
-            gallery.innerHTML = ""; // 清空畫面
-
-            data.files.forEach(file => {
-                if (file.mimeType.startsWith("image/")) {
-                    const imgUrl = https://www.googleapis.com/drive/v3/files/${fileId}?alt=media&key=${apiKey};
-                    
-                    const imgElement = `<img src="${imgUrl}" alt="${file.name}">`;
-                    gallery.innerHTML += imgElement;
-                }
-            });
-        }
-
-        fetchImages();
-    </script>
-
+    <p>希望你喜歡這張照片！</p>
 </body>
 </html>
