--- a/608/index.html
+++ b/608/index.html
@@ -21,7 +21,8 @@
     <p>這是我們的畢業照：</p>
 
     <!-- 顯示圖片 -->
-    <img src="https://drive.google.com/uc?export=view&id=1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k" alt="畢業照" width="300">
+    <img src="https://drive.google.com/thumbnail?id=1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k" alt="畢業照" width="300">
+
 
     <p>希望你喜歡這張照片！</p>
 </body>
