--- a/608/index.html
+++ b/608/index.html
@@ -16,8 +16,9 @@
             justify-content: center;
         }
         .gallery img {
-            width: 200px;
-            height: auto;
+            width: 200px; /* 限制最大寬度 */
+            height: auto; /* 保持原始比例 */
+            object-fit: contain; /* 確保圖片不變形 */
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s;
@@ -32,12 +33,11 @@
     <div class="gallery" id="photoGallery"></div>
 
     <script>
-        // 照片 ID 清單（替換成你的 Google Drive 照片 ID）
+        // 照片 ID 清單
         const photoIDs = [
-            "1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k",  // 照片 1
-            "1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1",  // 照片 2
-            "1eBU7eaQH10HCcYS9xGOObkkhganKA_fm",  // 照片 3
-            "你的圖片ID4"   // 可以繼續增加
+            "1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1",  // 照片 1
+            "1eBU7eaQH10HCcYS9xGOObkkhganKA_fm",  // 照片 2
+            "1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k"   // 照片 3（舊的 ID）
         ];
 
         // 取得 gallery 容器
