--- a/608/index.html
+++ b/608/index.html
@@ -27,11 +27,47 @@
         .gallery img:hover {
             transform: scale(1.1);
         }
+
+        /* 模態框樣式 */
+        .modal {
+            display: none; /* 隱藏模態框 */
+            position: fixed;
+            z-index: 1; /* 在最上層 */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.7); /* 背景透明黑 */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            margin: auto;
+            max-width: 90%;
+            max-height: 90%;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            color: #fff;
+            font-size: 35px;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <h1>畢業紀念冊</h1>
     <div class="gallery" id="photoGallery"></div>
+
+    <!-- 模態框 -->
+    <div id="myModal" class="modal">
+        <span class="close" id="closeModal">&times;</span>
+        <img class="modal-content" id="modalImage" />
+    </div>
 
     <script>
         // 照片 ID 清單
@@ -44,20 +80,36 @@
         // 取得 gallery 容器
         const gallery = document.getElementById("photoGallery");
 
-        // 動態生成圖片
-        photoIDs.forEach(id => {
-            const link = document.createElement("a");
-            link.href = `https://drive.google.com/uc?export=view&id=${id}`; // 完整圖片連結
-            link.target = "_blank";  // 在新視窗中打開
+        // 取得模態框和關閉按鈕
+        const modal = document.getElementById("myModal");
+        const modalImage = document.getElementById("modalImage");
+        const closeModal = document.getElementById("closeModal");
 
+        // 點擊圖片顯示模態框
+        photoIDs.forEach(id => {
             const img = document.createElement("img");
             img.src = `https://drive.google.com/thumbnail?id=${id}`; // 縮略圖
             img.alt = "畢業照";
 
-            // 將圖片放到連結裡
-            link.appendChild(img);
-            gallery.appendChild(link);
+            img.onclick = function() {
+                modal.style.display = "flex";
+                modalImage.src = `https://drive.google.com/uc?export=view&id=${id}`; // 顯示完整圖片
+            };
+
+            gallery.appendChild(img);
         });
+
+        // 點擊關閉按鈕關閉模態框
+        closeModal.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // 點擊模態框背景關閉模態框
+        window.onclick = function(event) {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        }
     </script>
 </body>
 </html>
