--- a/608/index.html
+++ b/608/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>608</title>
+    <title>畢業紀念冊</title>
     <style>
         body {
             font-family: Arial, sans-serif;
