--- a/608/index.html
+++ b/608/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <h1>我的高中時期照片</h1>
-    <img src="https://drive.google.com/uc?id=1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k" alt="高中照片">
+    <img src="https://drive.google.com/uc?export=view&id=1aE5eccTUGATLbyg9xSFqpdyiB0iu3s8Y" alt="高中照片">
 </body>
 </html>
