--- a/608/index.html
+++ b/608/index.html
@@ -1,9 +1,115 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh-TW">
 <head>
-    <title>我的照片展示</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>畢業紀念冊</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+        }
+        .gallery img {
+            width: 200px; /* 限制最大寬度 */
+            height: 200px; /* 設定固定高度 */
+            object-fit: cover; /* 填滿框框，保持比例並裁切多餘部分 */
+            object-position: center; /* 顯示圖片的中間部分 */
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s;
+        }
+        .gallery img:hover {
+            transform: scale(1.1);
+        }
+
+        /* 模態框樣式 */
+        .modal {
+            display: none; /* 隱藏模態框 */
+            position: fixed;
+            z-index: 1; /* 在最上層 */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.7); /* 背景透明黑 */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            margin: auto;
+            max-width: 90%;
+            max-height: 90%;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            color: #fff;
+            font-size: 35px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <h1>我的高中時期照片</h1>
-    <img src="https://drive.google.com/uc?export=view&id=1aE5eccTUGATLbyg9xSFqpdyiB0iu3s8Y" alt="高中照片">
+    <h1>畢業紀念冊</h1>
+    <div class="gallery" id="photoGallery"></div>
+
+    <!-- 模態框 -->
+    <div id="myModal" class="modal">
+        <span class="close" id="closeModal">&times;</span>
+        <img class="modal-content" id="modalImage" />
+    </div>
+
+    <script>
+        // 照片 ID 清單
+        const photoIDs = [
+            "1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1",  // 照片 1
+            "1eBU7eaQH10HCcYS9xGOObkkhganKA_fm",  // 照片 2
+            "1vjIV9LM4XR0cBdrPa9mkxYvXGvUMBh2k"   // 照片 3（舊的 ID）
+        ];
+
+        // 取得 gallery 容器
+        const gallery = document.getElementById("photoGallery");
+
+        // 取得模態框和關閉按鈕
+        const modal = document.getElementById("myModal");
+        const modalImage = document.getElementById("modalImage");
+        const closeModal = document.getElementById("closeModal");
+
+        // 點擊圖片顯示模態框
+        photoIDs.forEach(id => {
+            const img = document.createElement("img");
+            img.src = `https://drive.google.com/thumbnail?id=${id}`; // 縮略圖
+            img.alt = "畢業照";
+
+            img.onclick = function() {
+                modal.style.display = "flex";
+                modalImage.src = `https://drive.google.com/uc?export=view&id=${id}`; // 顯示完整圖片
+            };
+
+            gallery.appendChild(img);
+        });
+
+        // 點擊關閉按鈕關閉模態框
+        closeModal.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // 點擊模態框背景關閉模態框
+        window.onclick = function(event) {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
