--- a/608/index.html
+++ b/608/index.html
@@ -93,7 +93,7 @@
 
             img.onclick = function() {
                 modal.style.display = "flex";
-                modalImage.src = `https://drive.google.com/uc?export=view&id=${id}`; // 顯示完整圖片
+                modalImage.src = `https://drive.google.com/thumbnail?id=${id}`; // 顯示完整圖片
             };
 
             gallery.appendChild(img);
