--- a/608/index.html
+++ b/608/index.html
@@ -92,8 +92,8 @@
             img.alt = "畢業照";
 
             img.onclick = function() {
-                modal.style.display = "flex";
-                modalImage.src = `https://drive.google.com/thumbnail?id=${id}`; // 顯示完整圖片
+            modal.style.display = "flex";
+            modalImage.src = `https://drive.google.com/thumbnail?id=${id}&sz=w1000`; // 設定較大解析度
             };
 
             gallery.appendChild(img);
