--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         // 你的 API 金鑰（從 Google Cloud Console 取得）
         const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0";
         // 你的 Google Drive 資料夾 ID
-        const FOLDER_ID = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA";
+        const FOLDER_ID = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA?usp";
         
         // Google Drive API URL
         const API_URL = `https://www.googleapis.com/drive/v3/files?q='${FOLDER_ID}'+in+parents&key=${API_KEY}&fields=files(id,name)`;
