--- a/608/index.html
+++ b/608/index.html
@@ -91,7 +91,7 @@
                     img.alt = file.name;
                     img.onclick = function () {
                         modal.style.display = "flex";
-                        modalImage.src = `https://drive.google.com/thumbnail?id=${file.id}&sz=w1000`; // 顯示較大圖片
+                        modalImage.src = `https://drive.google.com/uc?id=${file.id}`; // 顯示完整圖片
                     };
                     gallery.appendChild(img);
                 });
