--- a/608/index.html
+++ b/608/index.html
@@ -1,112 +1,136 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>畢業紀念冊</title>
     <style>
+        /* 整體樣式設定 */
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
         }
-        .gallery {
+
+        .profile-container {
             display: flex;
-            flex-wrap: wrap; /* ✅ 讓圖片超過寬度時自動換行 */
             justify-content: center;
-            gap: 10px; /* ✅ 保持圖片間距 */
-            padding: 10px;
+            margin-top: 50px;
         }
-        .gallery img {
-            width: 300px;
+
+        /* 每個個人檔案的框框 */
+        .profile {
+            width: 200px;
             height: 300px;
-            object-fit: cover;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
             cursor: pointer;
-            border-radius: 8px;
-            transition: transform 0.2s;
+            transition: transform 0.3s;
         }
-        .gallery img:hover {
-            transform: scale(1.1);
+
+        .profile:hover {
+            transform: scale(1.05); /* 滑鼠懸停時放大 */
         }
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
+
+        /* 大頭貼圓形 */
+        .profile-image {
+            width: 120px;
+            height: 120px;
+            margin: 20px auto;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        .profile-image img {
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            object-fit: cover;
+        }
+
+        /* 座號與名字 */
+        .profile-info {
+            padding: 10px;
+        }
+
+        .name {
+            font-size: 18px;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        .seat-number {
+            font-size: 16px;
+            color: #555;
+        }
+
+        /* 照片展示區 */
+        #photoGallery {
+            margin-top: 50px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
             justify-content: center;
-            align-items: center;
         }
-        .modal img {
-            max-width: 90%;
-            max-height: 90%;
+
+        #photoGallery img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
             border-radius: 8px;
-        }
-        .close {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 30px;
-            color: white;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <h1>畢業紀念冊</h1>
-    <div class="gallery" id="photoGallery"></div>
-
-    <!-- 放大顯示圖片 -->
-    <div class="modal" id="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <img id="modalImage">
+    <!-- 個人檔案區 -->
+    <div class="profile-container">
+        <div class="profile" onclick="loadPhotos()">
+            <div class="profile-image">
+                <img src="https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1" alt="王大明大頭貼">
+            </div>
+            <div class="profile-info">
+                <p class="name">王大明</p>
+                <p class="seat-number">39號</p>
+            </div>
+        </div>
     </div>
 
+    <!-- 照片展示區 -->
+    <div id="photoGallery"></div>
+
     <script>
-        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 請填入你的 API 金鑰
-        const FOLDER_ID = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA"; // 替換成你的資料夾 ID
-        const gallery = document.getElementById("photoGallery");
-        const modal = document.getElementById("modal");
-        const modalImage = document.getElementById("modalImage");
+        // 這個 function 用來載入該人的所有照片
+        function loadPhotos() {
+            // 假設這是王大明的資料夾 ID
+            const folderId = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA"; // 改成王大明資料夾的 ID
+            const apiKey = "YOUR_API_KEY"; // 替換為你的 API 金鑰
 
-        async function loadImages() {
-            const API_URL = `https://www.googleapis.com/drive/v3/files?q=%27${FOLDER_ID}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
+            const API_URL = `https://www.googleapis.com/drive/v3/files?q='%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${apiKey}&fields=files(id,name)`;
 
-            try {
-                const response = await fetch(API_URL);
-                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+            fetch(API_URL)
+                .then(response => response.json())
+                .then(data => {
+                    const gallery = document.getElementById("photoGallery");
+                    gallery.innerHTML = ""; // 清空現有的內容
 
-                const data = await response.json();
-                gallery.innerHTML = ""; // 清空畫面
-
-                if (!data.files || data.files.length === 0) {
-                    gallery.innerHTML = "<p>沒有找到圖片，請確認資料夾權限</p>";
-                    return;
-                }
-
-                data.files.forEach((file) => {
-                    const img = document.createElement("img");
-                    img.src = `https://drive.google.com/thumbnail?id=${file.id}&sz=w300`; // 載入縮圖
-                    img.alt = file.name;
-                    img.onclick = function () {
-                        modal.style.display = "flex";
-                        modalImage.src = `https://drive.google.com/thumbnail?id=${file.id}&sz=w1000`; // 顯示較大圖片
-                    };
-                    gallery.appendChild(img);
-                });
-            } catch (error) {
-                console.error("圖片載入錯誤：", error);
-                gallery.innerHTML = "<p>發生錯誤，請檢查 API 金鑰與資料夾權限</p>";
-            }
+                    if (data.files && data.files.length > 0) {
+                        // 如果有照片，則顯示
+                        data.files.forEach(file => {
+                            const imgElement = document.createElement('img');
+                            const fileId = file.id;
+                            imgElement.src = `https://drive.google.com/uc?id=${fileId}`;
+                            imgElement.alt = file.name;
+                            gallery.appendChild(imgElement);
+                        });
+                    } else {
+                        gallery.innerHTML = "<p>沒有找到照片！</p>";
+                    }
+                })
+                .catch(error => console.error('Error loading photos:', error));
         }
-
-        function closeModal() {
-            modal.style.display = "none";
-        }
-
-        loadImages();
     </script>
 
 </body>
