--- a/608/index.html
+++ b/608/index.html
@@ -106,7 +106,7 @@
         function loadPhotos() {
             // 假設這是王大明的資料夾 ID
             const folderId = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA"; // 改成王大明資料夾的 ID
-            const apiKey = "YOUR_API_KEY"; // 替換為你的 API 金鑰
+            const apiKey = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 替換為你的 API 金鑰
 
             const API_URL = `https://www.googleapis.com/drive/v3/files?q='%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${apiKey}&fields=files(id,name)`;
 
